# trialsynth

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: stability_tests.yml
.trunk/: trunk.yaml
doc/: conf.py  index.rst  requirements.txt
doc/modules/: index.rst
src/trial_synth/: config_environ.py
src/trial_synth/base/: config.py  fetcher.py  process.py  rest_api_response_models.py  store.py  transform.py  trial.py  util.py
src/trial_synth/base/resources/: default_config.ini
src/trial_synth/clinical_trials_dot_gov/: __main__.py  config.py  config_environ.py  fetch.py  process.py  processor.py  store.py  transform.py  util.py  validate.py
src/trial_synth/clinical_trials_dot_gov/resources/: default_config.ini
src/trial_synth/resources/: default_config.ini
src/trial_synth/who/: __main__.py  config.py  config_environ.py  fetch.py  fetch_ictrp.py  process.py  store.py  transform.py  trial_model.py  util.py  validate.py
src/trial_synth/who/resources/: default_config.ini
src/trialsynth/base/: __main__.py  config.py  fetch.py  ground.py  models.py  process.py  rest_api_response_models.py  store.py  transform.py  trial.py  util.py  validate.py
src/trialsynth/base/resources/: default_config.ini
src/trialsynth/clinical_trials_dot_gov/: __init__.py  __main__.py  config.py  fetch.py  ground.py  process.py  rest_api_response_models.py  store.py  transform.py  util.py  validate.py
src/trialsynth/who/: __main__.py  config.py  fetch.py  ground.py  process.py  store.py  transform.py  trial_model.py  validate.py
tests/: test_clinical_trials_dot_gov.py
